--- a/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/25" fx:controller="view.WindowLoginController">
+<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.WindowLoginController">
     <children>
-        <Button fx:id="button" layoutX="126" layoutY="90" onAction="#handleButtonAction" text="Click Me!" />
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
+      <Pane prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: red;" />
+      <Pane layoutX="151.0" prefHeight="362.0" prefWidth="350.0" style="-fx-background-color: blue;" />
     </children>
 </AnchorPane>
