--- a/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
@@ -1,11 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.WindowLoginController">
+<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.UserWindowController">
     <children>
-      <Pane prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: red;" />
-      <Pane layoutX="151.0" prefHeight="362.0" prefWidth="350.0" style="-fx-background-color: blue;" />
+      <Pane fx:id="leftPane" prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: ACA9FF;">
+         <children>
+            <Label fx:id="usernameLabel" layoutX="26.0" layoutY="76.0" prefHeight="25.0" prefWidth="121.0" text="Username:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="passwordLabel" layoutX="26.0" layoutY="139.0" prefHeight="25.0" prefWidth="121.0" text="Password:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="nameLabel" layoutX="24.0" layoutY="168.0" prefHeight="25.0" prefWidth="121.0" text="Name:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="telephoneLabel" layoutX="24.0" layoutY="200.0" prefHeight="25.0" prefWidth="121.0" text="Telephone:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="genderLabel" layoutX="24.0" layoutY="231.0" prefHeight="25.0" prefWidth="121.0" text="Gender:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="emailLabel" layoutX="26.0" layoutY="107.0" prefHeight="25.0" prefWidth="121.0" text="Email:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label fx:id="cardNumberLabel" layoutX="24.0" layoutY="262.0" prefHeight="25.0" prefWidth="121.0" text="Card Number:">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="deleteUserBttn" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" style="-fx-background-radius: 10px; -fx-background-color: NULL;" text="DELETE USER" textFill="RED" />
+         </children>
+      </Pane>
+      <Pane fx:id="rightPane" layoutX="151.0" prefHeight="362.0" prefWidth="350.0" style="-fx-background-color: F7F5FF;">
+         <children>
+            <TextField fx:id="usernameTextField" layoutX="32.0" layoutY="76.0" prefHeight="25.0" prefWidth="286.0" promptText="exampleuser" />
+            <TextField fx:id="emailTextField" layoutX="32.0" layoutY="107.0" prefHeight="25.0" prefWidth="286.0" promptText="example@email.com" />
+            <TextField fx:id="nameTextField" layoutX="32.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="name" />
+            <TextField fx:id="surnameTextField" layoutX="190.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="surname" />
+            <TextField fx:id="phoneTextField" layoutX="32.0" layoutY="200.0" prefHeight="25.0" prefWidth="286.0" promptText="688 88 88 88" />
+            <PasswordField fx:id="passwordPasswordField" layoutX="32.0" layoutY="138.0" prefHeight="25.0" prefWidth="286.0" promptText="· · · · · · · ·" />
+            <RadioButton fx:id="maleRadioButton" layoutX="34.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="MALE" />
+            <RadioButton fx:id="femaleRadioButton" layoutX="126.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="FEMALE" />
+            <RadioButton fx:id="otherRadioButton" layoutX="225.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="OTHER" />
+            <TextField fx:id="cardNumber1TextField" alignment="CENTER" layoutX="32.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
+            <TextField fx:id="cardNumber2TextField" alignment="CENTER" layoutX="109.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
+            <TextField fx:id="cardNumber3TextField" alignment="CENTER" layoutX="183.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
+            <TextField fx:id="cardNumber4TextField" alignment="CENTER" layoutX="259.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
+            <Button fx:id="saveChangesBttn" layoutX="209.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-radius: 10px;" text="SAVE CHANGES" />
+            <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="151.0" layoutY="6.0" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: 000066;" text="username" textAlignment="CENTER" textFill="#000066">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Button fx:id="logOutBttn" layoutX="283.0" layoutY="6.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="59.0" style="-fx-background-radius: 10px;" text="LOG OUT">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
     </children>
 </AnchorPane>
