--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyCapchaWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyCapchaWindow.fxml
@@ -18,7 +18,7 @@
                   <Font name="System Italic" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="39.0" prefHeight="25.0" prefWidth="450.0" text="WRITE THE NEXT CODE TO CONFIRM">
+            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="450.0" text="WRITE THE NEXT CODE TO CONFIRM">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
@@ -29,6 +29,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
+            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="59.0" prefHeight="17.0" prefWidth="434.0" wrapText="true" />
          </children>
       </Pane>
     </children>
