--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
@@ -11,7 +11,7 @@
     <children>
       <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <PasswordField fx:id="passwordPasswordField" layoutX="82.0" layoutY="78.0" prefHeight="25.0" prefWidth="306.0" promptText="· · · · · · · ·" />
+            <PasswordField fx:id="passwordPasswordField" layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" promptText="· · · · · · · ·" />
             <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
             <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancellButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
@@ -19,11 +19,12 @@
                   <Font name="System Italic" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="39.0" prefHeight="25.0" prefWidth="450.0" text="INSER YOUR PASSWORD">
+            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="450.0" text="INSER YOUR PASSWORD">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
+            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="58.0" prefHeight="17.0" prefWidth="434.0" wrapText="true" />
          </children>
       </Pane>
     </children>
