--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyCapchaWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyCapchaWindow.fxml
@@ -29,7 +29,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="59.0" prefHeight="17.0" prefWidth="434.0" wrapText="true" />
+            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="59.0" prefHeight="17.0" prefWidth="434.0" textFill="#ea0101" wrapText="true" />
          </children>
       </Pane>
     </children>
