--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.VerifyActionWindowController">
+<AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerifyActionWindowController">
     <children>
       <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
