--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyCaptchaWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyCaptchaWindow.fxml
@@ -11,8 +11,8 @@
     <children>
       <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
-            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
+            <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
+            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancellButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
@@ -23,13 +23,13 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" />
-            <Label fx:id="codeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="59.0" prefHeight="32.0" prefWidth="450.0" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+            <TextField fx:id="codeTextField" layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" />
+            <Label fx:id="codeLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="66.0" prefHeight="25.0" prefWidth="450.0" textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="59.0" prefHeight="17.0" prefWidth="434.0" textFill="#ea0101" wrapText="true" />
+            <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="53.0" prefHeight="17.0" prefWidth="434.0" textFill="#ea0101" wrapText="true" />
          </children>
       </Pane>
     </children>
