--- a/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/UserWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserWindowController">
+<AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserWindowController">
     <children>
       <Pane fx:id="leftPane" prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: ACA9FF;">
          <children>
@@ -71,7 +71,7 @@
             <TextField fx:id="cardNumber3TextField" alignment="CENTER" layoutX="183.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
             <TextField fx:id="cardNumber4TextField" alignment="CENTER" layoutX="259.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
             <Button fx:id="saveChangesBttn" layoutX="209.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-radius: 10px;" text="SAVE CHANGES" />
-            <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="151.0" layoutY="6.0" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: 000066;" text="username" textAlignment="CENTER" textFill="#000066">
+            <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="151.0" layoutY="6.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
                </font>
