--- a/ADTi_DIN_Reto_CRUD/src/view/LoginWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/LoginWindow.fxml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane id="AnchorPane" prefHeight="360.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginWindowController">
    <children>
-      <Pane fx:id="leftPane" prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: ACA9FF;" />
+      <Pane fx:id="leftPane" prefHeight="362.0" prefWidth="152.0" style="-fx-background-color: ACA9FF;">
+         <children>
+            <ImageView fitHeight="130.0" fitWidth="130.0" layoutX="11.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logo.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
       <Pane fx:id="rightPane" layoutX="151.0" prefHeight="362.0" prefWidth="350.0" style="-fx-background-color: EEEEEE;">
          <children>
             <TextField fx:id="credentialTextField" layoutX="58.0" layoutY="138.0" prefHeight="25.0" prefWidth="260.0" promptText="exampleuser / example@email.com" />
             <PasswordField fx:id="passwordPasswordField" layoutX="58.0" layoutY="200.0" prefHeight="25.0" prefWidth="260.0" promptText="password" />
-            <Button fx:id="logInBttn" layoutX="135.0" layoutY="257.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="81.0" style="-fx-background-radius: 10px;" text="LOG IN" />
+            <Button fx:id="logInBttn" layoutX="135.0" layoutY="257.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="81.0" style="-fx-background-radius: 10px;" text="LOG IN">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
             <Button fx:id="signInBttn" layoutX="84.0" layoutY="295.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: null;" text="If you have no account SIGN IN" />
          </children>
       </Pane>
