--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyCaptchaWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyCaptchaWindow.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerifyCapchaWindowController">
+<AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerifyCaptchaWindowController">
     <children>
       <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
             <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
-            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancellButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
+            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
