--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
@@ -13,7 +13,7 @@
          <children>
             <PasswordField fx:id="passwordPasswordField" layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" promptText="· · · · · · · ·" />
             <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
-            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancellButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
+            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
