--- a/ADTi_DIN_Reto_CRUD/src/view/SignUpWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/SignUpWindow.fxml
@@ -54,25 +54,64 @@
       </Pane>
       <Pane fx:id="rightPane" layoutX="151.0" prefHeight="362.0" prefWidth="350.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <TextField fx:id="usernameTextField" layoutX="32.0" layoutY="76.0" prefHeight="25.0" prefWidth="286.0" promptText="exampleuser" />
-            <TextField fx:id="emailTextField" layoutX="32.0" layoutY="107.0" prefHeight="25.0" prefWidth="286.0" promptText="example@email.com" />
-            <TextField fx:id="nameTextField" layoutX="32.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="name" />
-            <TextField fx:id="lastnameTextField" layoutX="190.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="lastname" />
-            <TextField fx:id="telephoneTextField" layoutX="32.0" layoutY="200.0" prefHeight="25.0" prefWidth="286.0" promptText="688 88 88 88" />
-            <PasswordField fx:id="passwordPasswordField" layoutX="32.0" layoutY="138.0" prefHeight="25.0" prefWidth="286.0" promptText="· · · · · · · ·" />
+            <TextField fx:id="usernameTextField" layoutX="32.0" layoutY="76.0" prefHeight="25.0" prefWidth="286.0" promptText="exampleuser">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="emailTextField" layoutX="32.0" layoutY="107.0" prefHeight="25.0" prefWidth="286.0" promptText="example@email.com">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <PasswordField fx:id="passwordPasswordField" layoutX="32.0" layoutY="138.0" prefHeight="25.0" prefWidth="286.0" promptText="· · · · · · · ·">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></PasswordField>
+            <TextField fx:id="nameTextField" layoutX="32.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="name">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="lastnameTextField" layoutX="190.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="lastname">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="telephoneTextField" layoutX="32.0" layoutY="200.0" prefHeight="25.0" prefWidth="286.0" promptText="688 88 88 88">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
             <RadioButton fx:id="maleRadioButton" layoutX="34.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" selected="true" text="MALE">
                <toggleGroup>
                   <ToggleGroup fx:id="GenderGroup" />
-               </toggleGroup></RadioButton>
-            <RadioButton fx:id="femaleRadioButton" layoutX="126.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="FEMALE" toggleGroup="$GenderGroup" />
-            <RadioButton fx:id="otherRadioButton" layoutX="225.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="OTHER" toggleGroup="$GenderGroup" />
-            <TextField fx:id="cardNumber1TextField" alignment="CENTER" layoutX="32.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
-            <TextField fx:id="cardNumber2TextField" alignment="CENTER" layoutX="109.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
-            <TextField fx:id="cardNumber3TextField" alignment="CENTER" layoutX="183.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
-            <TextField fx:id="cardNumber4TextField" alignment="CENTER" layoutX="259.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
+               </toggleGroup>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></RadioButton>
+            <RadioButton fx:id="femaleRadioButton" layoutX="126.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="FEMALE" toggleGroup="$GenderGroup">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></RadioButton>
+            <RadioButton fx:id="otherRadioButton" layoutX="225.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="OTHER" toggleGroup="$GenderGroup">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></RadioButton>
+            <TextField fx:id="cardNumber1TextField" alignment="CENTER" layoutX="32.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="cardNumber2TextField" alignment="CENTER" layoutX="109.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="cardNumber3TextField" alignment="CENTER" layoutX="183.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
+            <TextField fx:id="cardNumber4TextField" alignment="CENTER" layoutX="259.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></TextField>
             <Button fx:id="signUpBttn" layoutX="130.0" layoutY="298.0" mnemonicParsing="false" onAction="#handleSignUp" prefHeight="25.0" prefWidth="91.0" style="-fx-background-radius: 10px;" text="SIGN UP">
                <cursor>
-                  <Cursor fx:constant="OPEN_HAND" />
+                  <Cursor fx:constant="HAND" />
                </cursor></Button>
             <Button fx:id="logInBttn" layoutX="84.0" layoutY="323.0" mnemonicParsing="false" onAction="#openLogin" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: null;" text="If you have an account LOG IN">
                <cursor>
