--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyUserWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -11,9 +12,6 @@
     <children>
       <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <PasswordField fx:id="passwordPasswordField" layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" promptText="· · · · · · · ·" />
-            <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM" />
-            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
@@ -25,6 +23,18 @@
                </font>
             </Label>
             <Label fx:id="errorLabel" alignment="CENTER" layoutX="18.0" layoutY="58.0" prefHeight="17.0" prefWidth="434.0" textFill="#ea0101" wrapText="true" />
+            <PasswordField fx:id="passwordPasswordField" layoutX="82.0" layoutY="90.0" prefHeight="25.0" prefWidth="306.0" promptText="· · · · · · · ·">
+               <cursor>
+                  <Cursor fx:constant="TEXT" />
+               </cursor></PasswordField>
+            <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
+            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></Button>
          </children>
       </Pane>
     </children>
