--- a/ADTi_DIN_Reto_CRUD/src/view/SignUpWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/SignUpWindow.fxml
@@ -61,12 +61,12 @@
       </Pane>
       <Pane fx:id="rightPane" layoutX="179.0" prefHeight="456.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <TextField fx:id="usernameTextField" editable="false" layoutX="30.0" layoutY="98.0" prefHeight="30.0" prefWidth="410.0" promptText="exampleuser">
+            <TextField fx:id="usernameTextField" layoutX="30.0" layoutY="98.0" prefHeight="30.0" prefWidth="410.0" promptText="exampleuser">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
             </TextField>
-            <TextField fx:id="emailTextField" editable="false" layoutX="30.0" layoutY="139.0" prefHeight="30.0" prefWidth="410.0" promptText="example@email.com">
+            <TextField fx:id="emailTextField" layoutX="30.0" layoutY="139.0" prefHeight="30.0" prefWidth="410.0" promptText="example@email.com">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
