--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
@@ -11,12 +11,12 @@
     <children>
       <Pane fx:id="rightPane" prefHeight="200.0" prefWidth="500.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="480.0" text="ARE YOU SURE YOU WANT TO DELETE THE PORFILE?">
+            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="480.0" text="ARE YOU SURE YOU WANT TO DELETE THE PROFILE?">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="textLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="75.0" prefHeight="51.0" prefWidth="480.0" text="This action is ireversible. The profile and its data will be deleted forever and it will not be able to restore it." textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+            <Label fx:id="textLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="75.0" prefHeight="51.0" prefWidth="480.0" text="This action is irreversible. The profile and its data will be deleted forever and it will not be able to restore it." textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
